--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
   "homepage": "http://lucasibar.github.io/pruebasubidadepaginagithubpage",
-  "name": "blabla",
+  "name": "mamatuttinaV2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.17",
+    "@mui/material": "^5.15.18",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@redux-devtools/extension": "^3.3.0",
+    "@reduxjs/toolkit": "^2.2.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.8",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.11",
     "web-vitals": "^2.1.4",
     "workbox-core": "^7.1.0",
     "workbox-expiration": "^7.1.0",
@@ -42,8 +55,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.1.1"
   }
 }
